--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -12,8 +12,8 @@ body {
 }
 
 html {
-  scroll-behavior: smooth;
-  transition: all 300ms ease;
+  scroll-behavior:smooth;
+  transition: all  300ms ease-in-out;
 }
 
 p {
@@ -77,6 +77,18 @@ a,
     align-items: center;
     gap: 10px;
   }
+ 
+  .btn1 {
+    border: 2px solid black;
+    font-weight: 600;
+    transition: all 300ms ease;
+    border-radius: 3px;
+    padding: 1rem;
+    height:30px;
+    width: 70px;
+    font-size: 7px;
+  }
+  
   
   .skills-details-container {
     display: flex;
@@ -99,9 +111,9 @@ h3 {
  @media(max-width:720px){
   .btn1{
     height: 25px;
-    width: 60px;
+    width: 50px;
     font-size: 7px; 
-   border: 2px solid black;
+    border: 2px solid black;
     font-weight: 600;
     transition: all 300ms ease;
     border-radius: 2px;
